almost ready extension

--- a/public/popup/pomodoro_timer.html
+++ b/public/popup/pomodoro_timer.html
@@ -16,7 +16,7 @@
           </div>
         <!-- <script src="pomodoro_timer.js"></script> -->
 
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
         
     </body>
 </html>
