ready to push for github

--- a/public/popup/pomodoro_timer.html
+++ b/public/popup/pomodoro_timer.html
@@ -8,15 +8,21 @@
         />
     </head>
     <body>
-        <div id="root">
-           
-        </div>
-        <div id="error-content" class="hidden">
+        <div id="root"></div>
+        <div
+            id="error-content"
+            class="hidden"
+        >
             <p>Something went wrong</p>
-          </div>
-        <!-- <script src="pomodoro_timer.js"></script> -->
+        </div>
 
-        <script src="index.js" type="module"></script>
-        
+        <link
+            rel="stylesheet"
+            href="index.css"
+        />
+        <script
+            src="index.js"
+            type="module"
+        ></script>
     </body>
 </html>
