--- a/public/options/options.html
+++ b/public/options/options.html
@@ -7,9 +7,11 @@
             content="width=device-width, initial-scale=1.0"
         />
         <title>Options for timer</title>
+        <link href="optionsCustom.css" rel="stylesheet">
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root" class="base"></div>
+        <link href="options.css" rel="stylesheet">
         <script src="options.js"></script>
     </body>
 </html>
